--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-touch-fullscreen" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no, email=no">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_499455_4p2vzhg255r.css">
   <style>
     html, body, #weex {
       width: 100%;
