个人中心(100%) 绑定手机号(100%)

--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
       height: 100%;
       overflow-x: hidden;
       -webkit-overflow-scrolling: touch;
+      background-color: rgba(236, 236, 236, 1);
     }
     body::before {
       content: "1";
